<resources>
    <string name="app_name">CustomUiSample</string>

    <string name="custom_text_view">커스텀 텍스트뷰 리스트 --------------</string>
    <string name="character_wrap_text_view">음절 단위 줄바꿈 텍스트뷰</string>
    <string name="badge_wrap_text_view">뱃지를 갖는 텍스트뷰</string>
    <string name="image_drawable_text_view">이미지가 포함된 텍스트뷰</string>
    <string name="separator_linked_wrap_text_view">구분자 기호로 연결된 1라인 텍스트뷰</string>

    <string name="national_anthem_1">동해 물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세. 무궁화 삼천리 화려 강산 대한 사람 대한으로 길이 보전하세.</string>
    <string name="national_anthem_2">남산 위에 저 소나무 철갑을 두른 듯 바람 서리 불변함은 우리 기상일세. 무궁화 삼천리 화려 강산 대한 사람 대한으로 길이 보전하세.</string>
    <string name="national_anthem_3">가을 하늘 공활한데 높고 구름 없이 밝은 달은 우리 가슴 일편단심일세. 무궁화 삼천리 화려 강산 대한 사람 대한으로 길이 보전하세.</string>
    <string name="national_anthem_4">이 기상과 이 맘으로 충성을 다하여 괴로우나 즐거우나 나라 사랑하세. 무궁화 삼천리 화려 강산 대한 사람 대한으로 길이 보전하세.</string>

    <string name="free_text_0">저 멀리 드넓은 바다</string>
    <string name="free_text_1">저 멀리 드넓은 바다에, 바닷물은 사랑스러운 수레국화 꽃잎만큼이나 파랗고 깨끗한 유리만큼이나 투명하다.</string>
    <string name="free_text_2">하늘거리는 줄기와 잎이 달린 놀라운 나무와 꽃들이 그곳 아래에서 자라는데, 바닷물이 조금만 휘저어도 마치 살아있는 것처럼 몸을 흔들어 댄다. 여기 새들이 나무 위로 날아가는 것처럼 각양각색의 물고기가 나뭇가지 사이를 드나든다. 드넓은 바다 가장 깊은 곳에 바다 왕의 궁전이 솟아 있다.</string>
    <string name="free_text_3">성벽은 산호로 지었으며 높이 솟은 뾰족한 창문은 보석, 호박으로 만들었다.</string>

    <string name="free_text_4">‘외국기업의 날 기념식’은 외국인 투자유치를 통해 국가경제 발전에 기여한 외국인투자기업 및 투자유치 관계자의 공로를 치하하고‚ 지속적인 투자촉진을 위해 지난 2001년부터 실시되고 있다.</string>

</resources>